reset password, tests added
